src/index.css
/* ... */
.add-listing-form-content {
  padding: 20px 40px;
}

.add-listing-form-content h1{
  color: #e86c6d;
}

.add-listing-form-content p{
  color: #8a8888;
}

.add-listing-form-content hr{
  width: 25%;
  margin-left: 0;
  height: 5px;
  border: 0;
  border-top: 4px solid #e86c6d;
  padding: 0;
}

.checkbox-container {
  margin-top: 10px;
}

.step3{
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.add-listing-form-fields h3 {
  margin: 5px 0;
}

.add-listing-form-fields p{
  color: black;
  margin: 0;
}


.add-listing-form-input-container {
  display: grid;
  grid-template-rows: 1fr;
  grid-gap: 15px;
}

.add-listing-form-input-container input, .add-listing-form-input-container select {
  padding: 10px;
  width: 100%;
  margin: 5px;
  border: none;
  font-size: 12px !important;
  background-color: white;
}

.add-listing-form-input-container span {
  font-size: 12px;
}

.add-listing-form-input-container select {
  appearance: none;
  font-size: 14px;
}

.add-listing-form-button {
  margin: 10px;
  width: 30%;
}

.add-listing-message-container {
  display: grid;
  grid-template-rows: 0.2fr 1.8fr;
  margin-left: auto;
  width: 90%;
  text-align: right;
}

.add-listing-message-content {
  margin: 0;
  margin-top: auto;
  margin-bottom: auto;
}

.add-listing-message-content h1 {
  color: #3f8c83;
  margin: 0;
}

.add-listing-message-content p {
  font-size: 18px;
  text-align: right;
}

.add-listing-form-input-header {
  margin: 20px 0;
}

.label-container {
  margin-bottom: 15px;
}

/* .checkbox {
  width: 100%;
} */

.checkbox input[type="checkbox"] {
  width: 10px !important;
}

.checkbox input[type="text"] {
  background: transparent;
  border: none;
  border-bottom: 1px solid #000000;
  width: 100px;
  padding: 0;
  border-radius: 0;
  margin-left: 10px;
}

/* Thank you page */
.add-listing-container.thank-you {
  padding: 80px 0;
}

.add-listing-form-content.thank-you {
  display: grid;
  grid-template-rows: 1fr;
  grid-gap: 30px;
}

.add-listing-form-body.thank-you h4 {
  font-size: 20px;
  width: 80%;
}

.add-listing-container.thank-you p {
  color: black;
}

/* Navigation */

.nav {
  display: grid;
  grid-template-columns: 1fr 1fr;
  text-decoration: none;
  font-weight: 500;
  padding: 10px 0;
  font-family: 'Raleway', sans-serif !important;
  width: 90%;
  margin-right: auto;
  margin-left: auto;
  background-color: white;
  color: #b9b9b9;
}

.nav ul {
  margin: 0;
}

.nav .btn-transparent {
  padding: 8px 12px;
  border-radius: 10px;
}


.nav-container {
  display: flex;
  align-items: center;
}

.nav-container li {
  display: inline;
}

.nav-container.two {
  margin-left: auto;
}

.nav-container li a {
  color: #4a4a4a;
  text-decoration: none;
}

.nav-container li a:hover {
  color: #e86c6d;
}

.nav-container li .active {
  color: #e86c6d;
}

.nav-logo {
  height: 50px;
}

.nav-menu-icon {
  height: 40px;
}

.nav .user-avatar-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.nav .user-avatar {
  height: 40px;
  width: 40px;
  margin-left: auto;
  margin-right: auto;
}

.nav .user-name {
  margin-top: auto;
  margin-bottom: auto;
}

.nav i {
  margin-left: 10px;
  cursor: pointer;
}

.nav .down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.dropdown-content {
    margin-top: 10px;
    display: none;
    position: absolute;
    background-color: white;
    /* width: 10% !important; */
    width: 120px;
    /* width: 20%; */
    border: solid;
    border-width: thin;
    z-index: 1;
    padding: 10px;
}

.dropdown-content hr {
  width: 100%;
  /* text-align: left !important; */
  /* margin-left: auto !important; */
  margin-right: auto !important;
}



/* .dropdown-content a:hover {background-color: #ddd} */

.dropdown:hover .dropdown-content {
  display: block;
}

/* Footer */
.footer {
  color: #b9b9b9;
  font-family: 'Raleway', sans-serif !important;
  font-size: 14px;
  background-color: #f7f7f7;
}

.footer h3 {
  color: #e86c6d;
}

.footer hr {
  margin: 0;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  border: 0;
  border-top: 1px solid #b9b9b9;
  padding: 0;
}

.footer .container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-gap: 20px;
  margin-left: auto;
  margin-right: auto;
  padding: 20px 0;
}

.footer h3, .footer ul {
  margin: 0;
}

.footer .logo {
  text-align: center;
}

.footer .logo img {
  height: 80px;
}

.footer nav {
  display: grid;
  grid-template-columns: 1fr 1fr;
  color: black;
}

.footer nav a {
  color: black;
  font-size: 20px;
  font-weight: 500;
}

.footer nav a:hover {
  color: #e86c6d;
}


/* Find parking */

.fa-ellipsis-v {
  color: grey !important;
  font-size: 10px;
  margin-left: 10px;
}

.find-parking-container {
  display: grid;
  padding-top: 0;
  width: 95%;
  /* height: 100vh; */
}

.find-parking-container .header {
  text-align: center;
}

.find-parking-container hr {
  width: 25%;
  height: 5px;
  border: 0;
  border-top: 4px solid #e86c6d;
  padding: 0;
}

.find-parking-container .header h1 {
  color: #e86c6d;
  font-size: 30px;
}


.find-parking-container .body .header p {
  margin: 0;
}

.find-parking-container .body .header h3 {
  margin-bottom: 5px;
}

.find-parking-container .body {
  display: grid;
  grid-template-columns: 0.3fr 0.7fr;
  grid-gap: 20px;
  margin-left: auto;
  margin-right: auto;
}

.find-parking-container .listing-container {
  height: 80vh;
  overflow: scroll;
}

.find-parking-container .listing {
  width: 90%;
  /* height: 80vh;
  overflow: scroll; */
}

.find-parking-container .listing h3 {
  font-weight: 700;
}


.find-parking-container .search-body {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 5px;
}

.find-parking-container .search-body button {
  color: white;
  background-color: #e86c6d;
  border: none;
  font-size: 20px;
  padding: 10px;
  margin: 7px 0;
}

.find-parking-container .search-body select {
  margin: 5px 0;
}

.find-parking-container .body .header {
  margin-bottom: 40px;
}
/* ... */

